--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.1.4'
     ext.anko_version = "0.10.1"
+    ext.support_version = "25.0.1"
     repositories {
         jcenter()
     }
