--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile "org.jetbrains.anko:anko-commons:$anko_version"
     compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile "com.google.code.gson:gson:2.8.0"
 }
 repositories {
     mavenCentral()
